--- a/BeamWallet/ViewControllers/PhraseViewController/InputPhraseViewController.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/InputPhraseViewController.xib
@@ -21,7 +21,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InputPhraseViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="y0S-AP-q9n" id="abe-Wp-jOr"/>
+                <outlet property="mainStack" destination="SY7-Yz-blR" id="h1A-Fi-2dN"/>
                 <outlet property="nextButton" destination="EZh-RJ-DHb" id="1j0-Cv-7nK"/>
+                <outlet property="stackWidth" destination="rD3-0f-E9e" id="4CV-LF-GQc"/>
+                <outlet property="stackY" destination="3oE-a9-erR" id="3Ql-mW-1bp"/>
                 <outlet property="view" destination="1Fc-IQ-u2K" id="H9r-XC-bGr"/>
             </connections>
         </placeholder>
