added screens: create wallet password, enter wallet password, creating/updating wallet added logic: creating a new wallet, entering an existing wallet

--- a/BeamWallet/ViewControllers/PhraseViewController/Cells/InputWordCell.xib
+++ b/BeamWallet/ViewControllers/PhraseViewController/Cells/InputWordCell.xib
@@ -47,6 +47,7 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                         <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dVj-JA-4Xf" customClass="BMWordField" customModule="BeamWallet" customModuleProvider="target">
@@ -56,8 +57,11 @@
                                     <constraint firstAttribute="height" constant="25" id="45V-Jr-Txt"/>
                                 </constraints>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <outlet property="delegate" destination="CCv-KC-rV9" id="i3p-xQ-6KA"/>
                                 </connections>
