--- a/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/CreateWallet/CreateWalletPasswordViewController.xib
@@ -16,13 +16,17 @@
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
         </array>
-        <array key="SF-Pro-Display-Semibold.otf">
-            <string>SFProDisplay-Semibold</string>
-        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateWalletPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
+                <outlet property="confirmPassField" destination="AQz-dp-S4r" id="iAn-8z-wqL"/>
+                <outlet property="mainStack" destination="pBA-uY-hLo" id="diQ-fK-FEB"/>
+                <outlet property="passConfirmLabel" destination="lE7-ae-2Ub" id="RsM-KM-eun"/>
+                <outlet property="passField" destination="7et-9b-4aA" id="rle-Mr-S5n"/>
+                <outlet property="passProgressView" destination="kAR-Ig-iOb" id="zM1-fw-1hJ"/>
+                <outlet property="stackWidth" destination="K4j-qV-TFN" id="AuH-LA-oYk"/>
+                <outlet property="stackY" destination="DZT-KC-Ppl" id="daT-cy-X7O"/>
                 <outlet property="view" destination="4bX-AV-PMw" id="8ae-Jr-HCE"/>
             </connections>
         </placeholder>
@@ -32,61 +36,121 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="pBA-uY-hLo">
-                    <rect key="frame" x="30" y="75" width="315" height="467"/>
+                    <rect key="frame" x="30" y="75" width="315" height="469.5"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create password to access your wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLc-86-sdM">
-                            <rect key="frame" x="0.0" y="0.0" width="315" height="17"/>
-                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create new password to access your wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLc-86-sdM">
+                            <rect key="frame" x="0.0" y="0.0" width="315" height="19.5"/>
+                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                            </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKG-Rj-luv">
-                            <rect key="frame" x="0.0" y="67" width="315" height="300"/>
+                            <rect key="frame" x="0.0" y="69.5" width="315" height="300"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter password" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="28h-Qv-j5T">
-                                    <rect key="frame" x="15" y="0.0" width="96" height="17"/>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="14"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7et-9b-4aA" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="15" y="20" width="285" height="32"/>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7et-9b-4aA" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
+                                    <rect key="frame" x="15" y="5" width="285" height="32"/>
                                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="32" id="AEg-rq-y9p"/>
                                     </constraints>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="placeHolderColor">
+                                            <color key="value" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="lineColor">
+                                            <color key="value" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                     <connections>
                                         <outlet property="delegate" destination="-1" id="5Zw-iX-fr8"/>
                                     </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAR-Ig-iOb" customClass="BMStepView" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="15" y="72" width="285" height="10"/>
+                                    <rect key="frame" x="15" y="52" width="285" height="6"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="10" id="pv2-wd-D1W"/>
+                                        <constraint firstAttribute="height" constant="6" id="pv2-wd-D1W"/>
                                     </constraints>
                                 </view>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AQz-dp-S4r" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
+                                    <rect key="frame" x="15" y="210.5" width="285" height="32"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="32" id="ax4-TE-67c"/>
+                                    </constraints>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="18"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="placeHolderColor">
+                                            <color key="value" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="lineHeight">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <outlet property="delegate" destination="-1" id="Bsm-sG-NTX"/>
+                                    </connections>
+                                </textField>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hez-Qz-z6Q">
+                                    <rect key="frame" x="15" y="73" width="285" height="107.5"/>
+                                    <string key="text">Strong password needs to meet the following requirements:
+•  the length must be at least 10 characters
+•  must contain at least one lowercase letter
+•  must contain at least one uppercase letter
+•  must contain at least one number</string>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="15"/>
+                                    <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lE7-ae-2Ub">
+                                    <rect key="frame" x="15" y="252.5" width="0.0" height="0.0"/>
+                                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
+                                    <color key="textColor" red="1" green="0.38431372549999998" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
+                                </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="7et-9b-4aA" secondAttribute="trailing" constant="15" id="2KX-eY-vxe"/>
+                                <constraint firstAttribute="trailing" secondItem="hez-Qz-z6Q" secondAttribute="trailing" constant="15" id="3P4-sR-4Fg"/>
+                                <constraint firstItem="AQz-dp-S4r" firstAttribute="top" secondItem="hez-Qz-z6Q" secondAttribute="bottom" constant="30" id="3hU-Ag-0X0"/>
                                 <constraint firstItem="kAR-Ig-iOb" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="5Bx-Ve-FGb"/>
+                                <constraint firstItem="lE7-ae-2Ub" firstAttribute="top" secondItem="AQz-dp-S4r" secondAttribute="bottom" constant="10" id="7Wh-kN-mUa"/>
                                 <constraint firstItem="7et-9b-4aA" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="8mE-p5-LP2"/>
                                 <constraint firstAttribute="height" constant="300" id="9HA-hF-s71"/>
-                                <constraint firstItem="28h-Qv-j5T" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="BaW-sH-MNP"/>
-                                <constraint firstItem="kAR-Ig-iOb" firstAttribute="top" secondItem="7et-9b-4aA" secondAttribute="bottom" constant="20" id="MJg-pj-chb"/>
+                                <constraint firstItem="7et-9b-4aA" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="top" constant="5" id="CgA-cW-WjE"/>
+                                <constraint firstItem="hez-Qz-z6Q" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="FhB-LS-tC0"/>
+                                <constraint firstItem="kAR-Ig-iOb" firstAttribute="top" secondItem="7et-9b-4aA" secondAttribute="bottom" constant="15" id="MJg-pj-chb"/>
+                                <constraint firstItem="AQz-dp-S4r" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="MUG-Ck-OEh"/>
                                 <constraint firstAttribute="trailing" secondItem="kAR-Ig-iOb" secondAttribute="trailing" constant="15" id="Zj7-sa-qLI"/>
-                                <constraint firstItem="7et-9b-4aA" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="top" constant="20" id="sZo-vd-YG5"/>
-                                <constraint firstItem="28h-Qv-j5T" firstAttribute="top" secondItem="vKG-Rj-luv" secondAttribute="top" id="y5n-8m-egH"/>
+                                <constraint firstItem="hez-Qz-z6Q" firstAttribute="top" secondItem="kAR-Ig-iOb" secondAttribute="bottom" constant="15" id="ecb-w6-vk4"/>
+                                <constraint firstItem="lE7-ae-2Ub" firstAttribute="leading" secondItem="vKG-Rj-luv" secondAttribute="leading" constant="15" id="jCi-zZ-JFN"/>
+                                <constraint firstAttribute="trailing" secondItem="AQz-dp-S4r" secondAttribute="trailing" constant="15" id="mSv-95-tvv"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CLb-ef-N8k">
-                            <rect key="frame" x="0.0" y="417" width="315" height="50"/>
+                            <rect key="frame" x="0.0" y="419.5" width="315" height="50"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seK-ui-jrF" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seK-ui-jrF" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
                                     <rect key="frame" x="31" y="3" width="253" height="44"/>
                                     <color key="backgroundColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
@@ -102,7 +166,11 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                             <real key="value" value="22"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                     </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <action selector="onNextWithSender:" destination="-1" eventType="touchUpInside" id="Q6R-u6-89x"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
